[package]
name = "rust-file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.5.0"
actix-web="4"
aes-gcm = "0.10.1"
futures-util = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = [
	"v4",
	"fast-rng",
	"serde",
]}
